<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--header-->
    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorBrown">

        <!--header-->
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:padding="5dp"
            android:src="@drawable/icon_back_white" />

        <TextView
            android:id="@+id/txt_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/img_back"
            android:layout_toRightOf="@id/img_back"
            android:fontFamily="@font/militech"
            android:gravity="center_vertical"
            android:text="@string/crud_read"
            android:textColor="@color/colorWhite"
            android:textSize="23sp" />
    </RelativeLayout>

    <!--list read-->
    <ListView
        android:id="@+id/list_vehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_header"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:visibility="visible" />

    <!--blank-->
    <LinearLayout
        android:id="@+id/ll_blank"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:alpha="0.2"
            android:src="@drawable/icon_read_blank" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:alpha="0.4"
            android:text="@string/no_vehicle"
            android:textColor="@color/colorBrown"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

    <!--shadow-->
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/rl_header"
        android:background="@drawable/shadow_top" />

    <!--alert-->
    <LinearLayout
        android:id="@+id/ll_alert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackTransparent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">


        <RelativeLayout
            android:id="@+id/rl_alert_in"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_corners">

            <TextView
                android:id="@+id/txt_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/alert_delete_vehicle"
                android:textAlignment="center"
                android:textColor="@color/colorBrown"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txt_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_alert"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="70dp"
                android:padding="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/yes"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_alert"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="20dp"
                android:padding="20dp"
                android:layout_marginRight="70dp"
                android:gravity="center"
                android:text="@string/no"
                android:textAlignment="center"
                android:textStyle="bold" />

        </RelativeLayout>


    </LinearLayout>
</RelativeLayout>