<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorBrown">

        <!--header-->
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:padding="5dp"
            android:src="@drawable/icon_back_white" />

        <TextView
            android:id="@+id/txt_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/img_back"
            android:fontFamily="@font/militech"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="@color/colorWhite"
            android:textSize="23sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/rl_header"
        android:background="@drawable/shadow_top_01" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_header"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_params"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:id="@+id/img_params"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:focusable="false"
                android:src="@drawable/method_01_03" />

            <TextView
                android:id="@+id/txt_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="58dp"
                android:layout_marginTop="42dp"
                android:text="@string/pager_init_params"
                android:textColor="@color/colorBrown"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/txt_01"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="28dp"
                android:alpha="0.2"
                android:background="@color/colorBrown"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_vehicle"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/img_vehicle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:focusable="false"
                android:src="@drawable/method_02_03" />

            <TextView
                android:id="@+id/txt_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="58dp"
                android:layout_marginTop="42dp"
                android:text="@string/pager_choose_vehicle"
                android:textColor="@color/colorBrown"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/txt_02"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="28dp"
                android:alpha="0.2"
                android:background="@color/colorBrown"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>